<resources>
    <string name="app_name">WiseFy Sample</string>

    <!-- Main Screen -->
    <string name="wisefy">WiseFy</string>
    <string name="wisefy_sample_description">Explore the various uses for WiseFy by poking around this sample app based on MVP architecture.</string>

    <!-- Add Network -->
    <string name="add_network">Add Network</string>
    <string name="wpa2">WPA2</string>
    <string name="wep">WEP</string>
    <string name="open">Open</string>

    <!-- Remove Network -->
    <string name="remove_network">Remove Network</string>

    <!-- Search -->
    <string name="regex_for_network">Regex for network…</string>
    <string name="search_for">Search for…</string>
    <string name="access_point">Access Point</string>
    <string name="ssid">SSID</string>
    <string name="saved_network">Saved Network</string>
    <string name="return_full_list_label">Return full list of results?</string>
    <string name="return_full_list_description">This option will return a list of results instead of an individual item when enabled.</string>
    <string name="filter_duplicates">Filter Duplicates</string>
    <string name="timeout_after_x_seconds_args_html">Timeout after <![CDATA[<b>%d</b>]]> seconds</string>

    <!-- Misc. -->
    <string name="disable_wifi">Disable Wifi</string>
    <string name="enabled_wifi">Enabled Wifi</string>
    <string name="get_current_network">Get Current Network</string>
    <string name="get_current_network_details">Get Current Network Details</string>
    <string name="get_frequency">Get Frequency</string>
    <string name="get_ip">Get IP</string>
    <string name="get_nearby_access_points">Get Nearby Access Points</string>
    <string name="get_saved_networks">Get Saved Networks</string>

    <string name="frequency_lollipop_notice">Retrieving network frequency is a Lollipop and above feature.</string>

    <!-- Nav -->
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="home">Home</string>
    <string name="misc">Misc.</string>
    <string name="search">Search</string>

    <!-- Shared -->
    <string name="network_password">Network Password</string>
    <string name="network_name">Network Name</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="info">Info</string>
    <string name="wisefy_error">WiseFy Error</string>
    <string name="wisefy_error_descriptions_args">An error occurred with WiseFy.  Error code: %d</string>

    <!-- Permissions -->
    <string name="permission_error">Permission Error</string>

    <string name="permission_error_add_open_network">Permissions for adding an open network are denied</string>
    <string name="permission_error_add_wep_network">Permissions for adding a WEP network are denied</string>
    <string name="permission_error_add_wpa2_network">Permissions for adding a WPA2 network are denied</string>

    <string name="permission_error_remove_network">Permissions for removing network are denied</string>

    <string name="permission_error_disable_wifi">Permissions for disabling wifi are denied</string>
    <string name="permission_error_enable_wifi">Permissions for enabling wifi are denied</string>
    <string name="permission_error_get_current_network">Permissions for getting current network are denied</string>
    <string name="permission_error_get_current_network_info">Permissions for getting current network info are denied</string>
    <string name="permission_error_get_frequency">Permissions for getting the frequency of the device\'s current network are denied</string>
    <string name="permission_error_get_ip">Permissions for getting the device\'s IP are denied</string>
    <string name="permission_error_get_nearby_access_points">Permissions for getting nearby access points are denied</string>
    <string name="permission_error_get_saved_networks">Permissions for getting saved networks are denied</string>

    <string name="permission_error_search_for_saved_network">Permissions for searching for a saved network are denied</string>
    <string name="permission_error_search_for_saved_networks">Permissions for searching for saved networks are denied</string>
    <string name="permission_error_search_for_access_point">Permissions for searching for an access point are denied</string>
    <string name="permission_error_search_for_access_points">Permissions for searching for access points are denied</string>
    <string name="permission_error_search_for_ssid">Permissions for searching for an SSID are denied</string>
    <string name="permission_error_search_for_ssids">Permissions for searching for SSIDs are denied</string>

    <string name="permission_error_unhandled_request_code_args">Unhandled permission requested.  Request code: %d</string>

    <!-- Content Descriptions -->
    <string name="content_description_logo">logo</string>

</resources>
