<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addNetwork"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/add"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/removeNetwork"
        android:icon="@drawable/ic_remove_circle"
        android:title="@string/remove"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/misc"
        android:icon="@drawable/ic_apps"
        android:title="@string/misc"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        />

</menu>
