<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/wisefyImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="@dimen/margin_big"
            android:layout_marginEnd="@dimen/margin_big"
            android:layout_marginBottom="@dimen/margin_small"
            android:src="@drawable/ic_launcher_foreground"
            android:tint="@color/colorPrimary"
            android:contentDescription="@string/content_description_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/wisefyTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/wisefy"
            android:textSize="32sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="@dimen/padding_small"
            android:paddingStart="@dimen/padding_big"
            android:paddingEnd="@dimen/padding_big"
            android:paddingBottom="@dimen/padding_big"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/wisefyImg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/descriptionTxt"
            app:layout_constraintVertical_bias="0"
            />

        <TextView
            android:id="@+id/descriptionTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/wisefy_sample_description"
            android:textSize="@dimen/font_size_large"
            android:gravity="center"
            android:layout_margin="@dimen/default_margin"
            android:padding="@dimen/padding_big"
            app:layout_constraintTop_toBottomOf="@+id/wisefyTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
